Switch to input instead of textarea to avoid a disappearing cursor on iOS with the textarea use.

--- a/clients/firefox/style.css
+++ b/clients/firefox/style.css
@@ -230,6 +230,10 @@ a.item.block {
   line-height: 20px;
 }
 
+.compose input[type="text"] {
+  width: 100%;
+}
+
 /* START chat bubble styles */
 
   .bubble {
